[gd_scene load_steps=6 format=3 uid="uid://cxlux5i4y5p8k"]

[ext_resource type="Script" path="res://environment/base.gd" id="1_fqjy0"]
[ext_resource type="Texture2D" uid="uid://cbp8gkbsq7o8v" path="res://assets/sample_asset_pack/Tilesets/Wooden House.png" id="1_rgjgv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_em65i"]
radius = 357.069

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58e4i"]
size = Vector2(98.0462, 72.1479)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_searg"]
size = Vector2(399, 316)

[node name="Base" type="Node2D"]
position = Vector2(861, 401)
script = ExtResource("1_fqjy0")

[node name="Area2D" type="Area2D" parent="."]

[node name="BAreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-15, -19)
shape = SubResource("CircleShape2D_em65i")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="WoodenHouse" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-6.99994, -1.99997)
scale = Vector2(4.04911, 4.39375)
texture = ExtResource("1_rgjgv")

[node name="Area2D" type="Area2D" parent="StaticBody2D/WoodenHouse"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/WoodenHouse/Area2D"]
position = Vector2(-3.08716, -3.75534)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_58e4i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-19.5, -19)
shape = SubResource("RectangleShape2D_searg")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="StaticBody2D/WoodenHouse/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D/WoodenHouse/Area2D" to="." method="_on_area_2d_mouse_exited"]
